# MaschProg

./: .gitignore
UE01/A02/: CMakeLists.txt  main.c  printTypes.c  printTypes.h
UE01/A02/tests/: CMakeLists.txt  test.c
UE01/A3/: CMakeLists.txt  main.c  smallestNumber.c  smallestNumber.h
UE01/A3/tests/: CMakeLists.txt  test.c
UE02/A04/: CMakeLists.txt  convergence.c  convergence.h  main.c
UE02/A04/tests/: CMakeLists.txt  test.c
UE03/A05/: CMakeLists.txt  main.c  memtools.c  memtools.h
UE03/A05/tests/: test.c
UE04/A06/: CMakeLists.txt  main.c
UE04/A06/tests/: test.c
UE04/A07/: CMakeLists.txt  main.c  svs_atoi.c  svs_atoi.h
UE04/A07/tests/: CMakeLists.txt  test.c
UE04/A08/: CMakeLists.txt  ll.c  ll.h  main.c
UE04/A08/tests/: CMakeLists.txt  test.c
UE04/A10/: CMakeLists.txt  main.c  memtools.c  sample.c  sample.h  sensor_mock.h
UE04/A10/tests/: CMakeLists.txt  test.c
UE05/A11/: CMakeLists.txt  main.c  memtools.c  memtools.h
UE05/A11/tests/: CMakeLists.txt  test.c
UE05/A12/: CMakeLists.txt  friends.c  friends.h  main.c
UE05/A12/tests/: CMakeLists.txt  test.c
UE06/: a14.asm
UE07/: a15.asm  a16-1.asm  a16-2.asm  a16-3.asm  a16-4.asm  a18.asm
